Added HomePage.java with goToHomePage and searchFlights method Modified AppTest.java

--- a/EaseMyTrip/test-output/index.html
+++ b/EaseMyTrip/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testGetURL">testGetURL</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testInvokeBrowser">testInvokeBrowser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testReadExcelFile">testReadExcelFile</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testSetUp">testSetUp</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testTearDown">testTearDown</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testSearchFlights">testSearchFlights</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -147,20 +132,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testGetURL">
-                  </a> <!-- testGetURL -->
-                  <span class="method-name">testGetURL</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testInvokeBrowser">
-                  </a> <!-- testInvokeBrowser -->
-                  <span class="method-name">testInvokeBrowser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="testReadExcelFile">
                   </a> <!-- testReadExcelFile -->
                   <span class="method-name">testReadExcelFile</span>
@@ -168,16 +139,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testSetUp">
-                  </a> <!-- testSetUp -->
-                  <span class="method-name">testSetUp</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testTearDown">
-                  </a> <!-- testTearDown -->
-                  <span class="method-name">testTearDown</span>
+                  <a name="testSearchFlights">
+                  </a> <!-- testSearchFlights -->
+                  <span class="method-name">testSearchFlights</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -234,32 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testInvokeBrowser')
+data.setCell(0, 1, 'testSearchFlights')
 data.setCell(0, 2, 'AutomationProject1.EaseMyTrip.AppTest')
-data.setCell(0, 3, 2562);
+data.setCell(0, 3, 5086);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testGetURL')
+data.setCell(1, 1, 'testReadExcelFile')
 data.setCell(1, 2, 'AutomationProject1.EaseMyTrip.AppTest')
-data.setCell(1, 3, 1293);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testReadExcelFile')
-data.setCell(2, 2, 'AutomationProject1.EaseMyTrip.AppTest')
-data.setCell(2, 3, 231);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testTearDown')
-data.setCell(3, 2, 'AutomationProject1.EaseMyTrip.AppTest')
-data.setCell(3, 3, 126);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testSetUp')
-data.setCell(4, 2, 'AutomationProject1.EaseMyTrip.AppTest')
-data.setCell(4, 3, 4);
+data.setCell(1, 3, 254);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -287,24 +239,12 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">AutomationProject1.EaseMyTrip.AppTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testSetUp</span>
+                <span class="method-name">testSearchFlights</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testInvokeBrowser</span>
-                <span class="method-start">6 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testGetURL</span>
-                <span class="method-start">2569 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testTearDown</span>
-                <span class="method-start">3863 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">testReadExcelFile</span>
-                <span class="method-start">3990 ms</span>
+                <span class="method-start">5089 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
