--- a/EaseMyTrip/test-output/old/Suite/classes.html
+++ b/EaseMyTrip/test-output/old/Suite/classes.html
@@ -11,23 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSetUp</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testGetURL</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testTearDown</td>
+<td>testSearchFlights</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>testReadExcelFile</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testInvokeBrowser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
