--- a/EaseMyTrip/test-output/emailable-report.html
+++ b/EaseMyTrip/test-output/emailable-report.html
@@ -9,14 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,234</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,355</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">AutomationProject1.EaseMyTrip.AppTest</td><td><a href="#m0">testGetURL</a></td><td rowspan="1">1641517425789</td><td rowspan="1">1293</td></tr><tr class="passedeven"><td><a href="#m1">testInvokeBrowser</a></td><td rowspan="1">1641517423226</td><td rowspan="1">2562</td></tr><tr class="passedeven"><td><a href="#m2">testReadExcelFile</a></td><td rowspan="1">1641517427210</td><td rowspan="1">231</td></tr><tr class="passedeven"><td><a href="#m3">testSetUp</a></td><td rowspan="1">1641517423220</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m4">testTearDown</a></td><td rowspan="1">1641517427083</td><td rowspan="1">126</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">AutomationProject1.EaseMyTrip.AppTest</td><td><a href="#m0">testReadExcelFile</a></td><td rowspan="1">1641577698378</td><td rowspan="1">254</td></tr><tr class="passedeven"><td><a href="#m1">testSearchFlights</a></td><td rowspan="1">1641577693289</td><td rowspan="1">5086</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">AutomationProject1.EaseMyTrip.AppTest#testGetURL</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">AutomationProject1.EaseMyTrip.AppTest#testInvokeBrowser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">AutomationProject1.EaseMyTrip.AppTest#testReadExcelFile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">AutomationProject1.EaseMyTrip.AppTest#testSetUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">AutomationProject1.EaseMyTrip.AppTest#testTearDown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">AutomationProject1.EaseMyTrip.AppTest#testReadExcelFile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">AutomationProject1.EaseMyTrip.AppTest#testSearchFlights</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
