--- a/EaseMyTrip/test-output/old/Default suite/methods.html
+++ b/EaseMyTrip/test-output/old/Default suite/methods.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fc37a">  <td>22/01/06 11:01:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testInvokeBrowser()[pri:1, instance:AutomationProject1.EaseMyTrip.AppTest@3e3047e6]">testInvokeBrowser</td> 
-  <td>main@1010931249</td>   <td></td> </tr>
-<tr bgcolor="7fc37a">  <td>22/01/06 11:01:02</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testSetUp()[pri:0, instance:AutomationProject1.EaseMyTrip.AppTest@3e3047e6]">testSetUp</td> 
-  <td>main@1010931249</td>   <td></td> </tr>
-<tr bgcolor="7fc37a">  <td>22/01/06 11:01:05</td>   <td>2757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testGetURL()[pri:2, instance:AutomationProject1.EaseMyTrip.AppTest@3e3047e6]">testGetURL</td> 
-  <td>main@1010931249</td>   <td></td> </tr>
-<tr bgcolor="7fc37a">  <td>22/01/06 11:01:06</td>   <td>3987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testTearDown()[pri:3, instance:AutomationProject1.EaseMyTrip.AppTest@3e3047e6]">testTearDown</td> 
-  <td>main@1010931249</td>   <td></td> </tr>
+<tr bgcolor="7fc37a">  <td>22/01/06 22:36:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testSearchFlights()[pri:4, instance:AutomationProject1.EaseMyTrip.AppTest@b62fe6d]">testSearchFlights</td> 
+  <td>main@1264413185</td>   <td></td> </tr>
+<tr bgcolor="7fc37a">  <td>22/01/06 22:36:31</td>   <td>4816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testReadExcelFile()[pri:5, instance:AutomationProject1.EaseMyTrip.AppTest@b62fe6d]">testReadExcelFile</td> 
+  <td>main@1264413185</td>   <td></td> </tr>
 </table>
