Added Flights Page and made changes to other files

--- a/EaseMyTrip/test-output/old/Suite/classes.html
+++ b/EaseMyTrip/test-output/old/Suite/classes.html
@@ -11,11 +11,23 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSearchFlights</td>
+<td>testSearchFlight</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>testReadExcelFile</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testNavToFlights</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>testOneWayFlight</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
