--- a/EaseMyTrip/test-output/old/Suite/methods-alphabetical.html
+++ b/EaseMyTrip/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fc37a">  <td>22/01/08 08:32:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testReadExcelFile()[pri:5, instance:AutomationProject1.EaseMyTrip.AppTest@b62fe6d]">testReadExcelFile</td> 
-  <td>main@1264413185</td>   <td></td> </tr>
-<tr bgcolor="7fc37a">  <td>22/01/08 08:32:40</td>   <td>-4591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testSearchFlights()[pri:4, instance:AutomationProject1.EaseMyTrip.AppTest@b62fe6d]">testSearchFlights</td> 
-  <td>main@1264413185</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/08 20:41:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.setUp()[pri:0, instance:AutomationProject1.EaseMyTrip.AppTest@fdefd3f]">setUp</td> 
+  <td>main@1516500233</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/08 20:41:31</td>   <td>3988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testNavToFlights()[pri:1, instance:AutomationProject1.EaseMyTrip.AppTest@fdefd3f]">testNavToFlights</td> 
+  <td>main@1516500233</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/08 20:41:32</td>   <td>4940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testOneWayFlight()[pri:1, instance:AutomationProject1.EaseMyTrip.AppTest@fdefd3f]">testOneWayFlight</td> 
+  <td>main@1516500233</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/08 20:41:33</td>   <td>5390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testReadExcelFile()[pri:10, instance:AutomationProject1.EaseMyTrip.AppTest@fdefd3f]">testReadExcelFile</td> 
+  <td>main@1516500233</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/08 20:41:32</td>   <td>4990</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testSearchFlight()[pri:2, instance:AutomationProject1.EaseMyTrip.AppTest@fdefd3f]">testSearchFlight</td> 
+  <td>main@1516500233</td>   <td></td> </tr>
 </table>
