changes for mac version

--- a/EaseMyTrip/test-output/old/Default suite/classes.html
+++ b/EaseMyTrip/test-output/old/Default suite/classes.html
@@ -11,11 +11,19 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSearchFlights</td>
+<td>NavToFlights</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testReadExcelFile</td>
+<td>OneWayFlight</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchFlights</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
