--- a/EaseMyTrip/test-output/index.html
+++ b/EaseMyTrip/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\chaar\AppData\Local\Temp\testng-eclipse--714869861\testng-customsuite.xml</span>
+                    <span>testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testReadExcelFile">testReadExcelFile</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTests" class="method navigator-link" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.AppTest" class="method navigator-link" hash-for-method="testSearchFlights">testSearchFlights</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTests" class="method navigator-link" hash-for-method="testReadExcelFile">testReadExcelFile</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTests" class="method navigator-link" hash-for-method="testSearchFlights">testSearchFlights</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +132,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">AutomationProject1.EaseMyTrip.AppTest</span>
+              <span class="class-name">AutomationProject1.EaseMyTrip.EaseMyTripTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="setUp">
+                  </a> <!-- setUp -->
+                  <span class="method-name">setUp</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="testReadExcelFile">
@@ -142,6 +154,8 @@
                   <a name="testSearchFlights">
                   </a> <!-- testSearchFlights -->
                   <span class="method-name">testSearchFlights</span>
+                  <em>
+(Checking for flights from Mumbai to chennai on Jan 23rd with 4 adults, 3 children and 2 infants.)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\chaar\AppData\Local\Temp\testng-eclipse--714869861\testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/fl/73tcjdt14w7fmqf42c7f7npm0000gn/T/testng-eclipse--680572242/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +172,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;AutomationProject1.EaseMyTrip.AppTest&quot;/&gt;
+      &lt;class name=&quot;AutomationProject1.EaseMyTrip.EaseMyTripTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,20 +212,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testSearchFlights')
-data.setCell(0, 2, 'AutomationProject1.EaseMyTrip.AppTest')
-data.setCell(0, 3, 15436);
+data.setCell(0, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTests')
+data.setCell(0, 3, 10245);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testReadExcelFile')
-data.setCell(1, 2, 'AutomationProject1.EaseMyTrip.AppTest')
-data.setCell(1, 3, 1295);
+data.setCell(1, 1, 'setUp')
+data.setCell(1, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTests')
+data.setCell(1, 3, 3466);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testReadExcelFile')
+data.setCell(2, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTests')
+data.setCell(2, 3, 225);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,14 +255,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">AutomationProject1.EaseMyTrip.AppTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">AutomationProject1.EaseMyTrip.EaseMyTripTests</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testSearchFlights</span>
+                <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <span class="method-name">testSearchFlights</span>
+                <span class="method-start">3468 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
                 <span class="method-name">testReadExcelFile</span>
-                <span class="method-start">15443 ms</span>
+                <span class="method-start">13714 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
