--- a/EaseMyTrip/test-output/old/Default suite/methods.html
+++ b/EaseMyTrip/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b9692">  <td>22/01/08 13:15:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testSearchFlights()[pri:4, instance:AutomationProject1.EaseMyTrip.AppTest@7c0c77c7]">testSearchFlights</td> 
-  <td>main@934275857</td>   <td></td> </tr>
-<tr bgcolor="9b9692">  <td>22/01/08 13:15:26</td>   <td>15444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.testReadExcelFile()[pri:5, instance:AutomationProject1.EaseMyTrip.AppTest@7c0c77c7]">testReadExcelFile</td> 
-  <td>main@934275857</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/09 12:21:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTests.testSearchFlights()[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTests@a4102b8]">testSearchFlights</td> 
+  <td>main@884452399</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/09 12:21:27</td>   <td>10246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTests.testReadExcelFile()[pri:5, instance:AutomationProject1.EaseMyTrip.EaseMyTripTests@a4102b8]">testReadExcelFile</td> 
+  <td>main@884452399</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/09 12:21:13</td>   <td>-3468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTests.setUp()[pri:0, instance:AutomationProject1.EaseMyTrip.EaseMyTripTests@a4102b8]">setUp</td> 
+  <td>main@884452399</td>   <td></td> </tr>
 </table>
