Integrated reading and writing from/to excel sheets respectively

--- a/EaseMyTrip/test-output/index.html
+++ b/EaseMyTrip/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTests" class="method navigator-link" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="readFlightsList">readFlightsList</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTests" class="method navigator-link" hash-for-method="testReadExcelFile">testReadExcelFile</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTests" class="method navigator-link" hash-for-method="testSearchFlights">testSearchFlights</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testReadExcelFile">testReadExcelFile</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights">testSearchFlights</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,9 +137,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">AutomationProject1.EaseMyTrip.EaseMyTripTests</span>
+              <span class="class-name">AutomationProject1.EaseMyTrip.EaseMyTripTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="readFlightsList">
+                  </a> <!-- readFlightsList -->
+                  <span class="method-name">readFlightsList</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="setUp">
@@ -163,7 +175,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/fl/73tcjdt14w7fmqf42c7f7npm0000gn/T/testng-eclipse--680572242/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/fl/73tcjdt14w7fmqf42c7f7npm0000gn/T/testng-eclipse--1436580137/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -172,7 +184,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;AutomationProject1.EaseMyTrip.EaseMyTripTests&quot;/&gt;
+      &lt;class name=&quot;AutomationProject1.EaseMyTrip.EaseMyTripTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -212,24 +224,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testSearchFlights')
-data.setCell(0, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTests')
-data.setCell(0, 3, 10245);
+data.setCell(0, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
+data.setCell(0, 3, 6741);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'setUp')
-data.setCell(1, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTests')
-data.setCell(1, 3, 3466);
+data.setCell(1, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
+data.setCell(1, 3, 3659);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testReadExcelFile')
-data.setCell(2, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTests')
-data.setCell(2, 3, 225);
+data.setCell(2, 1, 'readFlightsList')
+data.setCell(2, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
+data.setCell(2, 3, 886);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testReadExcelFile')
+data.setCell(3, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
+data.setCell(3, 3, 13);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -255,18 +271,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">AutomationProject1.EaseMyTrip.EaseMyTripTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">AutomationProject1.EaseMyTrip.EaseMyTripTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testSearchFlights</span>
-                <span class="method-start">3468 ms</span>
+                <span class="method-start">3662 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">readFlightsList</span>
+                <span class="method-start">10404 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testReadExcelFile</span>
-                <span class="method-start">13714 ms</span>
+                <span class="method-start">11291 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
