--- a/EaseMyTrip/test-output/old/Suite/classes.html
+++ b/EaseMyTrip/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>AutomationProject1.EaseMyTrip.EaseMyTripTests</td>
+<td>AutomationProject1.EaseMyTrip.EaseMyTripTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,6 +12,14 @@
 <tr>
 <td>&nbsp;</td>
 <td>testSearchFlights</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>readFlightsList</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
