--- a/EaseMyTrip/test-output/old/Suite/methods.html
+++ b/EaseMyTrip/test-output/old/Suite/methods.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7fc37a">  <td>22/01/09 10:50:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTests.testSearchFlights()[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTests@b62fe6d]">testSearchFlights</td> 
-  <td>main@1264413185</td>   <td></td> </tr>
-<tr bgcolor="7fc37a">  <td>22/01/09 10:50:23</td>   <td>14477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTests.testReadExcelFile()[pri:5, instance:AutomationProject1.EaseMyTrip.EaseMyTripTests@b62fe6d]">testReadExcelFile</td> 
-  <td>main@1264413185</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/09 16:59:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights()[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">testSearchFlights</td> 
+  <td>main@235237152</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/09 16:59:37</td>   <td>6135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.readFlightsList()[pri:5, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">readFlightsList</td> 
+  <td>main@235237152</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/09 16:59:27</td>   <td>-3508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.setUp()[pri:0, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">setUp</td> 
+  <td>main@235237152</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/09 16:59:39</td>   <td>8307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testReadExcelFile()[pri:6, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">testReadExcelFile</td> 
+  <td>main@235237152</td>   <td></td> </tr>
 </table>
