Added dataprovider for Test Case Searchflights

--- a/EaseMyTrip/test-output/index.html
+++ b/EaseMyTrip/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="readFlightsList">readFlightsList</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)">testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="setUp">setUp</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)">testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testReadExcelFile">testReadExcelFile</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Delhi, Mumbai, 6/1/2022, Economy, 2.0, 2.0, 0.0)">testSearchFlights(Delhi, Mumbai, 6/1/2022, Economy, 2.0, 2.0, 0.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights">testSearchFlights</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)">testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="AutomationProject1.EaseMyTrip.EaseMyTripTest" class="method navigator-link" hash-for-method="testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)">testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,32 +147,42 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="readFlightsList">
-                  </a> <!-- readFlightsList -->
-                  <span class="method-name">readFlightsList</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="setUp">
-                  </a> <!-- setUp -->
-                  <span class="method-name">setUp</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testReadExcelFile">
-                  </a> <!-- testReadExcelFile -->
-                  <span class="method-name">testReadExcelFile</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testSearchFlights">
-                  </a> <!-- testSearchFlights -->
+                  <a name="testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)">
+                  </a> <!-- testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0) -->
                   <span class="method-name">testSearchFlights</span>
-                  <em>
-(Checking for flights from Mumbai to chennai on Jan 23rd with 4 adults, 3 children and 2 infants.)                  </em>
+                  <span class="parameters">(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)">
+                  </a> <!-- testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0) -->
+                  <span class="method-name">testSearchFlights</span>
+                  <span class="parameters">(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSearchFlights(Delhi, Mumbai, 6/1/2022, Economy, 2.0, 2.0, 0.0)">
+                  </a> <!-- testSearchFlights(Delhi, Mumbai, 6/1/2022, Economy, 2.0, 2.0, 0.0) -->
+                  <span class="method-name">testSearchFlights</span>
+                  <span class="parameters">(Delhi, Mumbai, 6/1/2022, Economy, 2.0, 2.0, 0.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)">
+                  </a> <!-- testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0) -->
+                  <span class="method-name">testSearchFlights</span>
+                  <span class="parameters">(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)">
+                  </a> <!-- testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0) -->
+                  <span class="method-name">testSearchFlights</span>
+                  <span class="parameters">(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -175,7 +190,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/fl/73tcjdt14w7fmqf42c7f7npm0000gn/T/testng-eclipse--1436580137/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/fl/73tcjdt14w7fmqf42c7f7npm0000gn/T/testng-eclipse-283820962/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -224,28 +239,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testSearchFlights')
 data.setCell(0, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(0, 3, 6741);
+data.setCell(0, 3, 14148);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'setUp')
+data.setCell(1, 1, 'testSearchFlights')
 data.setCell(1, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(1, 3, 3659);
+data.setCell(1, 3, 12448);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'readFlightsList')
+data.setCell(2, 1, 'testSearchFlights')
 data.setCell(2, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(2, 3, 886);
+data.setCell(2, 3, 11364);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testReadExcelFile')
+data.setCell(3, 1, 'testSearchFlights')
 data.setCell(3, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
-data.setCell(3, 3, 13);
+data.setCell(3, 3, 10862);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'testSearchFlights')
+data.setCell(4, 2, 'AutomationProject1.EaseMyTrip.EaseMyTripTest')
+data.setCell(4, 3, 10318);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 59 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -273,20 +292,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">AutomationProject1.EaseMyTrip.EaseMyTripTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">setUp</span>
+                <span class="method-name">testSearchFlights(Mumbai, Chennai, 3/19/2022, Prem.Economy, 3.0, 2.0, 1.0)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testSearchFlights</span>
-                <span class="method-start">3662 ms</span>
+                <span class="method-name">testSearchFlights(Delhi, Bangalore, 4/1/2022, Economy, 4.0, 4.0, 2.0)</span>
+                <span class="method-start">11367 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">readFlightsList</span>
-                <span class="method-start">10404 ms</span>
+                <span class="method-name">testSearchFlights(Chennai, Delhi, 5/9/2022, Prem.Economy, 3.0, 1.0, 1.0)</span>
+                <span class="method-start">25516 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testReadExcelFile</span>
-                <span class="method-start">11291 ms</span>
+                <span class="method-name">testSearchFlights(Delhi, Mumbai, 6/1/2022, Economy, 2.0, 2.0, 0.0)</span>
+                <span class="method-start">36379 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testSearchFlights(Bangalore, Chennai, 7/1/2022, Prem.Economy, 1.0, 1.0, 1.0)</span>
+                <span class="method-start">48828 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
