--- a/EaseMyTrip/test-output/old/Suite/classes.html
+++ b/EaseMyTrip/test-output/old/Suite/classes.html
@@ -11,19 +11,15 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyPageTitle</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>testSearchFlights</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>setUp</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>readFlightsList</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testReadExcelFile</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
