--- a/EaseMyTrip/test-output/old/Default suite/methods-alphabetical.html
+++ b/EaseMyTrip/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 17:31:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.readFlightsList()[pri:5, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">readFlightsList</td> 
-  <td>main@1850180796</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 17:30:56</td>   <td>-10405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.setUp()[pri:0, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">setUp</td> 
-  <td>main@1850180796</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 17:31:07</td>   <td>887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testReadExcelFile()[pri:6, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">testReadExcelFile</td> 
-  <td>main@1850180796</td>   <td></td> </tr>
-<tr bgcolor="a8dba8">  <td>22/01/09 17:31:00</td>   <td>-6742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights()[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@11dc3715]">testSearchFlights</td> 
-  <td>main@1850180796</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
+  <td>main@178049969</td>   <td></td> </tr>
+<tr bgcolor="a8dba8">  <td>22/01/10 17:35:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EaseMyTripTest.testSearchFlights(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:4, instance:AutomationProject1.EaseMyTrip.EaseMyTripTest@2cbb3d47]">testSearchFlights</td> 
+  <td>main@178049969</td>   <td></td> </tr>
 </table>
